# bms-apps

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  jest.config.js  package.json  pnpm-lock.yaml
apps/building-semantics-api-app/: .env.template  .gitignore  README.md  pyproject.toml  test_buildingmotif_flow.py
apps/building-semantics-api-app/data/libraries/ashrae-223p-nrel/: TEMPLATE_FIX_PLAN.md  connections.yml  devices.yml  properties.yml  systems.yml
apps/building-semantics-api-app/data/libraries/ontologies/: 223p-deprecated.ttl  223p.ttl  223p_publication.docx  constraints.json  quantitykind  unit
apps/building-semantics-api-app/scripts/: debug_template_fill.py  equipment_graphs_visualization.md  graph_extraction_output_improved.json  test_rdf_extraction_real_data_improved.py  visualize_equipment_graphs.py
apps/building-semantics-api-app/src/: __init__.py  main.py
apps/building-semantics-api-app/src/adapters/: __init__.py  buildingmotif_adapter.py  template_types.py
apps/building-semantics-api-app/src/config/: settings.py
apps/building-semantics-api-app/src/constants/: __init__.py  namespaces.py
apps/building-semantics-api-app/src/controllers/: __init__.py  bacnet_references_controller.py  devices_controller.py  mappings_controller.py  spaces_controller.py  systems_controller.py  templates_controller.py  validation_controller.py
apps/building-semantics-api-app/src/data/: __init__.py  mock_templates.py
apps/building-semantics-api-app/src/dto/: __init__.py  bacnet_references_dto.py  mappings_dto.py  spaces_dto.py  systems_dto.py  templates_dto.py  validation_dto.py
apps/building-semantics-api-app/src/mappers/: mapping_mapper.py  template_mapper.py
apps/building-semantics-api-app/src/models/: __init__.py  bacnet_references_model.py  devices_model.py  exceptions.py  mappings_model.py  systems_model.py  templates_model.py
apps/building-semantics-api-app/src/routers/: bacnet_references.py  mappings.py  spaces.py  systems.py  templates.py  validation.py
apps/building-semantics-api-app/src/services/: validation_service.py
apps/building-semantics-api-app/src/utils/: label_utils.py  property_semantics.py
apps/building-semantics-api-app/tests/: __init__.py
apps/building-semantics-api-app/tests/integration/: conftest.py  test_bacnet_references_crud.py  test_buildingmotif_integration.py  test_buildingmotif_thread_safety.py  test_health.py  test_mappings_validation.py  test_project_relationship_rdf.py  test_systems_crud.py  test_template_uri_discovery.py  test_template_urn_extraction.py  test_templates_endpoint.py
apps/building-semantics-api-app/tests/integration/test_models/: __init__.py  test_mappings_persistence.py
apps/building-semantics-api-app/tests/unit/: test_buildingmotif_adapter.py  test_settings.py
docs/: architecture.md  (+3 more)
(+517 files in other folders)
